Fix build when using openGLES

If qtbase is built using openGLES instead of openGL, functions are available in
the QOpenGLFunctions_ES2 header.

BUG: 483425
FIXED-IN: 24.05.1